--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ font-family: copperplate;
     line-height: 50px;
     cursor: pointer;
     transition: .3s;
-    transform: translateX(-50%)
+    transform: translateX(-200%)
 }
 .inicio .contenido-seccion header .nav-bar:hover{
     box-shadow: 0 0 35px #fff;
@@ -381,8 +381,6 @@ font-family: copperplate;
     text-align: center ;
     border-radius: 10%;
     font-size: 20px;
-
-
 }
 .sobremi .contenido-seccion .titulo-seccion{
     font-family: 'copperplate';
@@ -423,9 +421,9 @@ font-family: copperplate;
 }
 
 .wrap{
-    margin: 50px auto;
     display: flex;
-    justify-content: center;
+    margin-top: 10px;
+    justify-content: space-between;
 }
 
 .tarjeta-wrap{
@@ -435,8 +433,8 @@ font-family: copperplate;
 }
 
 .tarjeta{
-    width: 300px;
-    height: 350px;
+    width: 250px;
+    height: 300px;
     background-color: #c58b8b;
     position: relative;
     transform-style: preserve-3d;
@@ -672,14 +670,14 @@ textarea{
     font-family: copperplate;
     font-size: 30px;
 }
-.contacto .contenido-seccion .fila{
+.contacto .contenido-seccion .div-instagram{
     display: flex;
     justify-content: space-around;
 }
-.contacto .contenido-seccion .fila .col{
+.contacto .contenido-seccion .div-instagram .instagram{
     margin-top: 50px;
 }
-.contacto .contenido-seccion .fila .col h2{
+.contacto .contenido-seccion .div-instagram .instagram h2{
     color: #c58b8b;
 }
 
