--- a/style.css
+++ b/style.css
@@ -791,6 +791,7 @@ textarea{
 
     .imagenMia{
         padding: 30px;
+        z-index: 4;
     }
     .sobremicamino .contenido-seccion2 .especial2-1{
         font-size: 20px;
@@ -854,6 +855,7 @@ textarea{
     }
     .imagenMia img{
         max-width: 100%;
+        z-index: 4;
     }
     .textoCamino{
         text-align: center;
