--- a/index2/camino.css
+++ b/index2/camino.css
@@ -1,4 +1,3 @@
-/*importamos las fuentes*/
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;400;600;700&family=Yellowtail&display=swap');
 *{
     font-family: "Titillium Web";
@@ -27,7 +26,7 @@ html{
 
 
 body {
-    background-image: url(./img/cielo-estrellado.jpg); /* Ruta de tu imagen de fondo */
+    background-image: url(./img2/cielo-estrellado.jpg); /* Ruta de tu imagen de fondo */
     background-size: cover; /* Ajusta la imagen para cubrir todo el fondo */
     background-position: center; /* Centra la imagen en el fondo */
     background-repeat: no-repeat; /* Evita la repetición de la imagen de fondo */
@@ -482,7 +481,7 @@ font-family: copperplate;
 }
 
 .card1{
-    background-image:url(./img/imgTarot7.avif);
+    background-image:url(./img2/imgTarot7.avif);
     background-size: cover;
     background-position: center; 
     background-repeat: no-repeat;
@@ -493,7 +492,7 @@ font-family: copperplate;
 
 .resumen{
     background: linear-gradient(rgba(0,0,0,.3), rgba(0,0,0,.3)),
-    url("img/imgTarot3.jpg");
+    url("img2/imgTarot3.jpg");
     padding: 140px 0 100px 0;
     text-align: center;
     background-size: cover;
@@ -557,7 +556,7 @@ font-family: copperplate;
 
 .sobremi2{
     background: linear-gradient(rgba(0,0,0,.3), rgba(0,0,0,.3)),
-    url("img/imgTarot3.jpg");
+    url("img2/imgTarot3.jpg");
     padding: 140px 0 100px 0;
     text-align: center;
     background-size: cover;
@@ -579,7 +578,7 @@ font-family: copperplate;
     max-width: 100%;
     color: white;
     background: linear-gradient(rgba(0,0,0,.3), rgba(0,0,0,.3)),
-    url("img/imgTarot3.jpg");
+    url("img2/imgTarot3.jpg");
     padding: 140px 0 100px 0;
     text-align: center;
     background-size: cover;
