--- a/style.css
+++ b/style.css
@@ -504,7 +504,7 @@ font-family: copperplate;
 }
 
 .card1{
-    background-image:url(./img/imgTarot7.avif);
+    background-image:url(./img/logoNuevo.jpeg);
     background-size: cover;
     background-position: center; 
     background-repeat: no-repeat;
