--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ html{
     width: 100%;
     height: 100%;
     top: 0;
+    z-index: -1;
 }
 
 h1{
@@ -571,6 +572,8 @@ textarea{
     padding: 140px 0 100px 0;
     color: rgb(250, 246, 246);
     text-align: center;
+    z-index: 99;
+    background-color: #000;
 }
 .contacto .contenido-seccion{
     max-width: 1000px;
