--- a/style.css
+++ b/style.css
@@ -598,6 +598,15 @@ textarea{
 /* SECCION RESPONSIVE*/
 
 @media screen and (max-width:1200px){
+
+    #particles-js{
+        background-color: #000;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        z-index: -1;
+    }
     .header img{
         width: 130px;
         height: 130px;
