--- a/index2/camino.css
+++ b/index2/camino.css
@@ -34,16 +34,19 @@
     transform: scale(1.1); /* Efecto de escala al hacer hover */
 }
 
+#particles-js{
+    background-color: #000;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    z-index: -1;
+}
+
 html{
     scroll-behavior: smooth;
 }
 
-/*seccion header*/
-.header{
-    background-color: #141212;
-    position:absolute;
-    width: 100%;
-}
 .foto-header {
     text-align: end;
 }
@@ -722,6 +725,15 @@ textarea{
 
 /* SECCION RESPONSIVE*/
 @media screen and (max-width:800px){
+
+    #particles-js{
+        background-color: #000;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        z-index: -1;
+    }
     .header img{
         width: 130px;
         height: 130px;
