--- a/style.css
+++ b/style.css
@@ -594,6 +594,9 @@ textarea{
 .contacto .contenido-seccion .div-instagram .instagram h2{
     color: #f50b0b;
 }
+.fa-brands{
+    color: rgb(212, 100, 253);
+}
 
 /* SECCION RESPONSIVE*/
 
