--- a/style.css
+++ b/style.css
@@ -149,6 +149,10 @@ font-family: copperplate;
     letter-spacing: 2px;
     color: #bd9d9d;
 }
+.inicio .contenido-seccion .info h3{
+    font-size: 25px;
+    margin-top: 10px;
+}
 .header .contenido-seccion .info .redes{
     margin: 30px 0;
 }
@@ -272,6 +276,10 @@ font-family: copperplate;
     margin-top: -10px;
     letter-spacing: 2px;
     color: #bd9d9d;
+}
+.inicio2 .contenido-seccion .info h3{
+    font-size: 25px;
+    margin-top: 10px;
 }
 .header2 .contenido-seccion2 .info2 .redes2{
     margin: 20px 0;
