se modifico responsive video

--- a/style.css
+++ b/style.css
@@ -807,7 +807,7 @@ textarea{
     .formu{
         max-width: 93%;
     }
-    .videoTiktok{
+    .video{
         max-width: 93%;
     }
     #formulario{
