--- a/style.css
+++ b/style.css
@@ -525,6 +525,12 @@ h4{
     background-position: center; 
     background-repeat: no-repeat;
 }
+.card7{
+    background-image:url(./img/barras.jpg);
+    background-size: cover;
+    background-position: center; 
+    background-repeat: no-repeat;
+}
 
 /*Video Youtube*/
 
