cambio footer copyr

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -684,4 +684,9 @@ body {
         width: 100%;
         */
     }
+    .footer__copyright{
+        font-size: 15px;
+        padding: 3px;
+        margin: 3px;
+    }
 }
