--- a/css/estilos.css
+++ b/css/estilos.css
@@ -119,6 +119,11 @@ body {
     text-decoration: none;
     padding: 13px 30px;
     border-radius: 32px;
+    transition: transform 0.5s ease, background-color 0.5s ease;
+}
+
+.cta:hover{
+    transform: scale(1.1);
 }
 
 .cta2 {
@@ -129,6 +134,11 @@ body {
     text-decoration: none;
     padding: 13px 30px;
     border-radius: 32px;
+    transition: transform 0.5s ease, background-color 0.5s ease;
+}
+
+.cta2:hover{
+    transform: scale(1.1);
 }
 
 /* About */
