--- a/css/estilos.css
+++ b/css/estilos.css
@@ -92,17 +92,34 @@ body {
 
 /*Video-diferencias*/
 
-.video-diferencias{
-    background-size: 20px 20px;
-    background-position: 0 0, 10px 10px;
-    overflow: hidden;
-    background-color: #e5e5f7;
-    
+video {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
 }
 
-.video-container{
- text-align: center;
-   
+/* Contenedor del video */
+.video-container {
+    position: relative;
+    width: 100%;  /* El contenedor ocupa todo el ancho disponible */
+    padding-top: 56.25%;  /* Relación 16:9 (9/16 = 0.5625, 56.25%) */
+    height: 0;  /* Se establece a 0 para que el relleno sea el que determine la altura */
+    overflow: hidden;
+    min-width: 300px;  /* Establecer un ancho mínimo */
+    min-height: 170px;  /* Establecer una altura mínima (proporcional a 16:9) */
+}
+
+/* El video dentro del contenedor */
+.video-container iframe, 
+.video-container object, 
+.video-container embed,
+.video-container video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -561,6 +578,10 @@ body {
         font-size: 2.5rem;
     }
 
+    .video-container {
+        min-width: 260px;  /* Ajusta el ancho mínimo en pantallas de hasta 800px */
+        min-height: 146px;  /* Ajusta la altura mínima proporcionalmente */
+    }
 
     .about__main{
         gap: 2em;
@@ -581,6 +602,10 @@ body {
     .knowledge__picture{
         grid-row: 1/2;
         justify-self: center;
+    }
+
+    .video-container{
+        width: 100%;
     }
 
     .testimony__container{
@@ -655,6 +680,11 @@ body {
 
     .price__price{
         font-size: 2rem;
+    }
+
+    .video-container {
+        min-width: 220px;  /* Asegura que el video no sea tan pequeño en pantallas de hasta 600px */
+        min-height: 124px;  /* Ajusta la altura mínima proporcionalmente */
     }
 
     .testimony{
