--- a/css/estilos.css
+++ b/css/estilos.css
@@ -103,7 +103,7 @@ video {
 .video-container {
     position: relative;
     width: 100%;  /* El contenedor ocupa todo el ancho disponible */
-    padding-top: 80%;  /* Relación 16:9 (9/16 = 0.5625, 56.25%) */
+    padding-top: 70%;  /* Relación 16:9 (9/16 = 0.5625, 56.25%) */
     height: 0;  /* Se establece a 0 para que el relleno sea el que determine la altura */
     overflow: hidden;
     min-width: 300px;  /* Establecer un ancho mínimo */
@@ -120,6 +120,12 @@ video {
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+/*Video Caras*/
+
+.article-video-caras{
+    transform: rotate(90deg);
 }
 
 
