--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,7 +7,7 @@
 
 :root {
     --padding-container: 100px 0;
-    --color-title: #8b6767;
+    --color-title: #C9A44C;
 }
 
 body {
@@ -79,7 +79,7 @@ body {
 }
 
 .nav__links {
-    color: #fff;
+    color: white;
     text-decoration: none;
 }
 
@@ -156,7 +156,7 @@ video {
 
 .cta {
     display: inline-block;
-    background-color: #f920ca;
+    background-color:  #E07C90;
     justify-self: center;
     color: #fff;
     text-decoration: none;
@@ -167,6 +167,7 @@ video {
 
 .cta:hover{
     transform: scale(1.1);
+    background-color: #EBA9B6;
 }
 
 .cta2 {
@@ -232,6 +233,12 @@ video {
 .about__icon2 {
     width: 250px;
 }
+.subtitle2{
+    color: var(--color-title);
+    font-size: 2rem;
+    margin-bottom: 25px;
+}
+
 
 /* Knowledge */
 
@@ -239,7 +246,7 @@ video {
     background-size: 20px 20px;
     background-position: 0 0, 10px 10px;
     overflow: hidden;
-    background-color: #e5e5f7;
+    background-color: #F6F2EB;
 }
 
 .knowledge__container{
@@ -280,7 +287,7 @@ video {
 }
 
 .price__element{
-    background-color: #e5e5f7;
+    background-color: #F6F2EB;
     text-align: center;
     border-radius: 10px;
     width: 330px;
@@ -339,7 +346,7 @@ video {
 /* Testimony */
 
 .testimony{
-    background-color: #e5e5f7;
+    background-color:#F6F2EB;
 }
 
 .testimony__container{
@@ -465,7 +472,7 @@ video {
 /* Footer */
 
 .footer{
-    background-color: #ca85a2;
+    background-color: #E07C90;
 }
 
 .footer__title{
